# PDFire

./: .gitignore  README.md  pyproject.toml  requirements.txt
PDFire/: __main__.py  config.py  main.py  pdfy.py  pyvenv.cfg  wsgi.py
PDFire/Scripts/: activate  activate.bat
PDFire/static/: package-lock.json  package.json  tailwind.config.js
PDFire/static/css/: main.css
PDFire/static/src/: App.js  hamburger.js  style.css
PDFire/templates/: contact.html  index.html  output.html  team.html
