[tool.poetry]
name = "PDFire"
version = "0.1.0"
description = "A web application to convert image files to PDFs using Flask as the backend and Tailwind CSS as the frontend."
authors = [
    "Pooranjoy Bhattacharya <pooranjoyb2016@gmail.com>",
]
maintainers = []
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
Flask = "^2.2.2"
Pillow = "^9.4.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
pylint = "^2.16.1"
types-Pillow = "^9.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
